--- a/FirstTask/index.css
+++ b/FirstTask/index.css
@@ -45,7 +45,7 @@ div.menu
     color: azure;
     top: 48%;
     right: -75px;
-    width: 5%;
+    width: 75px;
     border: 2px solid aquamarine;
 
 }
